# events-bot

./: .gitignore  Cargo.toml
.sqlx/: query-112f80764d7efc3fdb934983341a1ade9be345185c4a1b3ac4c167bf578dd26c.json  query-69e1b9bc838297cc74ecfb1d11eb2de774ef6f89d3c3ad1b993916f5acfcf879.json  query-8ae1c7a520d874236f82a34534662075cec498b4dc742769acb0367e848fad3b.json  query-93f63ab956702a72713840b99ceec2e56fbb6e187815423839c6c8e56da54577.json  query-972319394ad683dbd4adedf878398e5d2948c10ce50002d58de781ed410346e9.json  query-9b1adf137e119a8b750a536dfe13eb7017f865372aaf6a29230997a5568edca5.json  query-a02fc993041cd004085c1566a3b24d1ad609c7a2bec60e81e9eb5b76f35bd3ed.json  query-af0b444da91e6d8c9f5839b1aedb85e40c4966dadd036cb12a670d9e3817067c.json  query-afdba545d5df796e44a2a0e1c1f47039da02f78f54e5d33cdae977ba1ee212dd.json  query-ca3a951e2fd69789f8851b3796ce4733e5726bd32922e60486ca47e9c3bbbb54.json  query-d83d64d9c8d5c4865240b6f9e8a927562a352f9029d61ff471f2ec42ff724ce1.json  query-f0522d8d853d9e90f902f63dba469a054cd85b27f82cad64424ea1bf211ff077.json
migrations/: 20241226212231_init.sql  20241229212943_oops.sql  20241229231804_contribution.sql
oe_commands/: Cargo.toml
oe_commands/src/: lib.rs
oe_commands/src/badges/: mod.rs  users.rs  wrapper.rs
oe_commands/src/escape_room/: mod.rs  setup.rs  setup_channel_manual.rs
oe_commands/src/leaderboards/: mod.rs  timed.rs
oe_core/: Cargo.toml
oe_core/src/: lib.rs  serialize.rs  structs.rs
oe_events/: Cargo.toml
oe_events/src/: lib.rs
oe_events/src/escape_room/: cooldown.rs  interaction.rs  log.rs  mod.rs  move_channel.rs
src/: commands.rs  data.rs  events.rs  main.rs
src/commands/: badges.rs  checks.rs  escape_room.rs  meta.rs  mod.rs
src/commands/badges/: mod.rs  users.rs  wrapper.rs
src/commands/escape_room/: mod.rs  modify.rs  setup.rs  setup_channel_manual.rs  utils.rs
src/commands/escape_room/utils/: activate.rs  mod.rs  modify.rs
src/commands/leaderboards/: mod.rs
src/data/: mod.rs  serialize.rs
src/events/: cooldown.rs  log.rs  mod.rs  move_channel.rs  rejoin.rs
