[package]
name = "events-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "signal", "parking_lot"] }

dashmap = "5.5.3"
parking_lot = "0.12.1"
serde = "1.0.198"
serde_json = "1.0.116"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
features = ["temp_cache"]
default-features = false
branch = "next"

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
features = ["cache"]
branch = "serenity-next"

[patch."https://github.com/serenity-rs/serenity".serenity]
git = "https://github.com/jamesbt365/serenity"
branch = "invalid-permissions-half-fix"
