[package]
name = "events-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "signal", "parking_lot"] }

dashmap = "5.5.3"
parking_lot = "0.12.1"
serde = "1.0.198"
serde_json = "1.0.116"
tokio-util = "0.7.10"
small-fixed-array = "0.4.4"
to-arraystring = "0.2.0"
aformat = "0.1.3"
chrono = "0.4.38"
regex = "1.10.6"
base64 = "0.22.1"
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
rand = "0.8.5"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
features = ["temp_cache"]
default-features = false
branch = "next"

[dependencies.poise]
git = "https://github.com/jamesbt365/poise"
features = ["cache"]
branch = "fix-compile-serenity-next"
