[package]
name = "events-bot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serenity.workspace = true
poise.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
dashmap.workspace = true
dotenvy = "0.15.7"
oe_core = { path = "oe_core" }
oe_events = { path = "oe_events" }
oe_commands = { path = "oe_commands" }
parking_lot.workspace = true


[workspace]
members = [ "oe_commands",
    "oe_core", "oe_events",
]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "signal", "parking_lot"] }
serde = "1.0.198"
serde_json = "1.0.116"
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
to-arraystring = "0.2"
dashmap = "6"
parking_lot = "0.12.1"
tokio-util = "0.7.10"
small-fixed-array = "0.4.4"
aformat = "0.1.3"
itertools = "0.13.0"
regex = "1.10.6"
base64 = "0.22.1"
chrono = "0.4.38"

[workspace.dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
features = ["temp_cache"]
default-features = false
branch = "next"

[workspace.dependencies.poise]
git = "https://github.com/serenity-rs/poise"
features = ["cache"]
branch = "serenity-next"
