[package]
name = "oe_core"
version = "0.1.0"
edition = "2024"

[dependencies]
aformat.workspace = true
base64.workspace = true
parking_lot.workspace = true
poise.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serenity.workspace = true
sqlx.workspace = true
